syntax = "proto3";

import "google/protobuf/empty.proto";

package fence;

message CursorLockResponse {
	bool isLocked = 1;
	string errorMessage = 2;
}

message Display {
	string name = 1;
	uint32 width = 2;
	uint32 height = 3;
	int32 top = 4;
	int32 left = 5;
	bool selected = 6;
}

message DisplayList {
	repeated Display displays = 1;
}

message DisplayToggleRequest {
	string name = 1;
}

message DisplayToggleResponse {
	bool selected = 1;
}

message SaveConfigResponse {
	bool saved = 1;
}

message ConfigResponse {
	repeated Display displays = 1;
	float ui_display_factor = 2;
	bool active_by_default = 3;
}

service FenceManager {
	rpc ActivateCursorLock (google.protobuf.Empty) returns (CursorLockResponse) {}
	rpc DeactivateCursorLock (google.protobuf.Empty) returns (CursorLockResponse) {}
	rpc SetDisplays (DisplayList) returns (google.protobuf.Empty) {}
	rpc GetConfig (google.protobuf.Empty) returns (ConfigResponse) {}
	rpc SaveConfig (ConfigResponse) returns (ConfigResponse) {}
	rpc ToggleDisplaySelected (DisplayToggleRequest) returns (DisplayToggleResponse) {}
}